--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -28,24 +28,24 @@ Build-Depends:
  libxi-dev,
  libxmu-dev,
  pyqt5-dev-tools,
- python-all-dev (>= 2.6.6-3~),
- python-argparse,
- python-gts,
- python-matplotlib,
- python-minieigen [!precise],
- python-numpy,
- python-pil,
- python-pyqt5,
- python-tk,
- python-xlib,
+ python3-all-dev (>= 2.6.6-3~),
+ python3-argparse,
+ python3-gts,
+ python3-matplotlib,
+ python3-minieigen [!precise],
+ python3-numpy,
+ python3-pil,
+ python3-pyqt5,
+ python3-tk,
+ python3-xlib,
  zlib1g-dev
 Build-Depends-Indep:
  dvipng,
  graphviz,
  libjs-jquery,
  lmodern,
- python-bibtex,
- python-sphinx (>= 1.0.7+dfsg),
+ python3-bibtex,
+ python3-sphinx (>= 1.0.7+dfsg),
  texlive-fonts-recommended,
  texlive-generic-extra,
  texlive-latex-extra,
@@ -109,16 +109,16 @@ Pre-Depends:
 Multi-Arch: foreign
 Depends:
  libyadedaily (= ${binary:Version}),
- python-argparse,
- python-gts,
- python-matplotlib,
- python-minieigen [!precise],
- python-pil,
- python-pyqt5,
- python-pyqt5.qtsvg,
- python-pyqt5.qtwebkit,
- python-tk,
- python-xlib,
+ python3-argparse,
+ python3-gts,
+ python3-matplotlib,
+ python3-minieigen [!precise],
+ python3-pil,
+ python3-pyqt5,
+ python3-pyqt5.qtsvg,
+ python3-pyqt5.qtwebkit,
+ python3-tk,
+ python3-xlib,
  ${misc:Depends},
  ${python:Depends},
  ${shlibs:Depends}
