remove trailing spaces in compile/link flags (policy CMP0004)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,7 +339,7 @@ ENDIF(ENABLE_GUI)
 # This one will cry on attempts to build CGAL-based packages without cgal
 IF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW))
   MESSAGE(STATUS "PFVFLOW and TWOPHASEFLOW depends on CGAL, and ENABLE_CGAL is disabled (not found or turned OFF)")
-ENDIF(ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW)
+ENDIF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW))
 #===========================================================
 IF(ENABLE_CGAL)
   INCLUDE(FindGMP)
@@ -426,7 +426,7 @@ IF(ENABLE_MPI)
   FIND_PACKAGE(MPI)
   IF (MPI_FOUND)
     INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS} -DYADE_MPI")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS};${MPI_CXX_COMPILE_FLAGS};-DYADE_MPI")
     SET (LINKLIBS "${LINKLIBS};${MPI_CXX_LIBRARIES};${MPI_CXX_LINK_FLAGS}")
     MESSAGE(STATUS "MPI found")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} MPI")
