fix trailing spaces inserted in flags by FIND_PACKAGE(MPI) (breaks policy CMP0004 only with openmpi v1 on ubuntu16.04 build)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -427,7 +427,9 @@ IF(ENABLE_MPI)
   IF (MPI_FOUND)
     INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS};${MPI_CXX_COMPILE_FLAGS};-DYADE_MPI")
-    SET (LINKLIBS "${LINKLIBS};${MPI_CXX_LIBRARIES};${MPI_CXX_LINK_FLAGS}")
+    string (STRIP "${MPI_CXX_LIBRARIES}" MPI_LIBRARIES)
+    string (STRIP "${MPI_CXX_LINK_FLAGS}" MPI_LINK_FLAGS)
+    SET (LINKLIBS "${LINKLIBS};${MPI_LIBRARIES};${MPI_LINK_FLAGS}")
     MESSAGE(STATUS "MPI found")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} MPI")
     # sometimes mpi.h is not found. cmake should find it, but didn't. I'm not sure why. Here I put all directotries where it can be found.
