final (?) fix of CMakeList's ENABLE_MPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,7 +426,7 @@ IF(ENABLE_MPI)
   FIND_PACKAGE(MPI)
   IF (MPI_FOUND)
     INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS};${MPI_CXX_COMPILE_FLAGS};-DYADE_MPI")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS} -DYADE_MPI")
     string (STRIP "${MPI_CXX_LIBRARIES}" MPI_LIBRARIES)
     string (STRIP "${MPI_CXX_LINK_FLAGS}" MPI_LINK_FLAGS)
     SET (LINKLIBS "${LINKLIBS};${MPI_LIBRARIES};${MPI_LINK_FLAGS}")
