--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -12,7 +12,6 @@ Build-Depends:
  debhelper (>= 9),
  freeglut3-dev,
  help2man,
- ipython,
  libboost-all-dev,
  libbz2-dev,
  libcgal-dev [!armel],
@@ -117,6 +116,8 @@ Depends:
  python3-pyqt5.qtwebkit,
  python3-tk,
  python3-xlib,
+ python3-ipython,
+ python3-future,
  ${misc:Depends},
  ${python:Depends},
  ${shlibs:Depends}
