Update depending packages

--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -61,9 +61,18 @@ Multi-Arch: foreign
 Depends:
  gnuplot,
  gtk2-engines-pixbuf,
- ipython,
  libyadedaily (= ${binary:Version}),
- python-yadedaily (= ${binary:Version}), 
+ python-yadedaily (= ${binary:Version}),
+ python3-matplotlib,
+ python3-minieigen,
+ python3-pil,
+ python3-pyqt5,
+ python3-pyqt5.qtsvg,
+ python3-pyqt5.qtwebkit,
+ python3-tk,
+ python3-xlib,
+ python3-ipython,
+ python3-future,
  ${python:Depends},
  ${misc:Depends}
 Description: Platform for discrete element modeling
@@ -109,7 +118,7 @@ Depends:
  libyadedaily (= ${binary:Version}),
  python-gts,
  python3-matplotlib,
- python3-minieigen [!precise],
+ python3-minieigen,
  python3-pil,
  python3-pyqt5,
  python3-pyqt5.qtsvg,
