--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -186,9 +186,6 @@ test_16_04:
     - make_16_04
 
 test_18_04:
-  apt install pip3
-  apt remove python3-mpi4py
-  pip3 install mpi4py
   <<: *test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   only:
@@ -232,6 +229,9 @@ test_suse15:
   <<: *platforms_definition
   stage: test
   script:
+    - apt install pip3
+    - apt remove python3-mpi4py
+    - pip3 install mpi4py
     - install/bin/yade-ci --checks
 
 check_16_04:
