--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -232,7 +232,7 @@ test_suse15:
     - apt update
     - apt install -y python3-pip
     - apt remove -y python3-mpi4py
-    - yes | pip3 install mpi4py
+    - yes | pip3 install --disable-pip-version-check mpi4py
     - install/bin/yade-ci --checks
 
 check_16_04:
