--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -246,6 +246,7 @@ check_18_04:
   before_script:
     - export OMPI_MCA_rmaps_base_oversubscribe=1
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
+    - export OMPI_MCA_mpi_yield_when_idle=1
   only:
     - master
     - merge_request
@@ -258,6 +259,7 @@ check_stretch:
   before_script:
     - export OMPI_MCA_rmaps_base_oversubscribe=1
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
+    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org/faq/?category=running#oversubscribing)
   only:
     - master
     - merge_request
