--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -211,10 +211,10 @@ test_18_04_nogui:
 .check_template: &check_definition
   <<: *platforms_definition
   stage: test
-#  before_script:
-#    - export OMPI_MCA_rmaps_base_oversubscribe=1
-#    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
-#    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org/faq/?category=running#oversubscribing)
+  before_script:
+    - export OMPI_MCA_rmaps_base_oversubscribe=1
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
+    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org/faq/?category=running#oversubscribing)
   script:
     - install/bin/yade-ci --checks
 
@@ -238,10 +238,6 @@ check_stretch:
 
 check_buster:
   <<: *check_definition
-  before_script:
-    - export OMPI_MCA_rmaps_base_oversubscribe=1
-    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
-    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   dependencies:
     - make_buster
