set size of cellHandles accurately instead of a hardcoded max size

--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -487,7 +487,7 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 		if ( !b.exists || b.id==ignoredBody ) continue;
 		if ( b.isSphere || b.isClump ) flow.tesselation().insert ( b.pos[0], b.pos[1], b.pos[2], b.radius, b.id );
 	}
-	flow.tesselation().redirected=true;//By inserting one-by-one, we already redirected
+	flow.tesselation().redirect();// populate vertexHandles
 	flow.shearLubricationForces.resize ( flow.tesselation().maxId+1 );
 	flow.shearLubricationTorques.resize ( flow.tesselation().maxId+1 );
 	flow.pumpLubricationTorques.resize ( flow.tesselation().maxId+1 );
